--- a/SmartRoomSolution/SmartRoomSolution/Views/Web.config
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="SmartRoomSolution" />
+        <add namespace="SmartRoomSolution.Web" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
