second fix to brandon <3

--- a/SmartRoomSolution/SmartRoomSolution/SmartRoom.Web.csproj
+++ b/SmartRoomSolution/SmartRoomSolution/SmartRoom.Web.csproj
@@ -271,6 +271,12 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SmartRoom.Model\SmartRoom.Model.csproj">
+      <Project>{612dec73-286c-403a-abde-145b7c9430da}</Project>
+      <Name>SmartRoom.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
