git ignore changes

--- a/SmartRoomSolution/SmartRoomSolution/Web.config
+++ b/SmartRoomSolution/SmartRoomSolution/Web.config
@@ -7,9 +7,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="SmartRoomSolution.Web.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SmartRoomSolution-20150128055924.mdf;Initial Catalog=aspnet-SmartRoomSolution-20150128055924;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SmartRoomSolution.Web-20150128055924.mdf;Initial Catalog=aspnet-SmartRoomSolution.Web-20150128055924;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -17,6 +20,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="GoogleAPI.ClientID" value ="1084733801830-4j2fje2ku2b6tkpa4v9v6cbbt08jeiql.apps.googleusercontent.com"/>
+    <add key="GoogleAPI.ClientSecret" value ="WIeQIEArSTs1P_drjOQvsSiC"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -88,4 +93,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <applicationSettings>
+    <SmartRoomSolution.Web.Properties.Settings>
+      <setting name="ApplicationName" serializeAs="String">
+        <value>SmartRoom</value>
+      </setting>
+    </SmartRoomSolution.Web.Properties.Settings>
+  </applicationSettings>
 </configuration>
