test code for reference

--- a/SmartRoom/SmartRoom.Web/SmartRoom.Web.csproj
+++ b/SmartRoom/SmartRoom.Web/SmartRoom.Web.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DataServices\getTestInfo.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -246,6 +247,12 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SmartRoom.Database\SmartRoom.Database.csproj">
+      <Project>{db346480-44ab-4174-86e4-607fe26204b2}</Project>
+      <Name>SmartRoom.Database</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
