--- a/SmartRoom/packages/repositories.config
+++ b/SmartRoom/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\SmartRoom.Database\packages.config" />
   <repository path="..\SmartRoom.Web\packages.config" />
 </repositories>
