--- a/SmartRoom/packages/repositories.config
+++ b/SmartRoom/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\SmartRoom.Database\packages.config" />
-  <repository path="..\SmartRoom.Web\packages.config" />
+  <repository path="..\SmartRoom.DAL\packages.config" />
+  <repository path="..\SmartRoom.Model\packages.config" />
+  <repository path="..\SmartRoom\packages.config" />
 </repositories>
