--- a/SmartRoom/SmartRoom.Web/Web.config
+++ b/SmartRoom/SmartRoom.Web/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SmartRoom.Web-20150213075928.mdf;Initial Catalog=aspnet-SmartRoom.Web-20150213075928;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SmartRoom-20150305090945.mdf;Initial Catalog=aspnet-SmartRoom-20150305090945;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="SmartModel" connectionString="data source=localhost;initial catalog=SmartRoom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -27,12 +28,6 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -87,5 +82,11 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <contexts>
+      <context type="SmartRoom.Database.SmartModel, SmartRoom.Database">
+        <databaseInitializer type="SmartRoom.Database.SmartModelInitializer, SmartRoom.Database" />
+      </context>
+    </contexts>
+
   </entityFramework>
 </configuration>
