--- a/SmartRoom/SmartRoom/Web.config
+++ b/SmartRoom/SmartRoom/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SmartRoom-20150305090945.mdf;Initial Catalog=aspnet-SmartRoom-20150305090945;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SmartRoom.Web-20150305090945.mdf;Initial Catalog=aspnet-SmartRoom.Web-20150305090945;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="SmartModel" connectionString="data source=localhost;initial catalog=SmartRoom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SmartModel" connectionString="data source=localhost;initial catalog=SmartRoom.Web;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -83,8 +83,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
     <contexts>
-      <context type="SmartRoom.Database.SmartModel, SmartRoom.Database">
-        <databaseInitializer type="SmartRoom.Database.SmartModelInitializer, SmartRoom.Database" />
+      <context type="SmartRoom.Web.Database.SmartModel, SmartRoom.Web.Database">
+        <databaseInitializer type="SmartRoom.Web.Database.SmartModelInitializer, SmartRoom.Web.Database" />
       </context>
     </contexts>
 
