--- a/SmartRoom/SmartRoom.Model/SmartRoom.Database.csproj
+++ b/SmartRoom/SmartRoom.Model/SmartRoom.Database.csproj
@@ -55,7 +55,7 @@
     <Compile Include="SmartModel.cs" />
     <Compile Include="SmartModelInitializer.cs" />
     <Compile Include="Tables\Account.cs" />
-    <Compile Include="Tables\CourseYoutubeLiveDetail.cs" />
+    <Compile Include="Tables\YoutubeLiveDetail.cs" />
     <Compile Include="Tables\ClassRole.cs" />
     <Compile Include="Tables\Course.cs" />
     <Compile Include="Tables\CourseOption.cs" />
