--- a/SmartRoom/SmartRoom/Web.config
+++ b/SmartRoom/SmartRoom/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=localhost;AttachDbFilename=|DataDirectory|\aspnet-SmartRoom.Web-20150305090945.mdf;Initial Catalog=aspnet-SmartRoom.Web-20150305090945;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="SmartModel" connectionString="data source=localhost;initial catalog=SmartRoom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SmartRoom.Web-20150305090945.mdf;Initial Catalog=aspnet-SmartRoom.Web-20150305090945;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SmartModel" connectionString="data source=(LocalDb)\v11.0;initial catalog=SmartRoom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
