service accounts don't work, yay~ :D

--- a/SmartRoom/SmartRoom/SmartRoom.Web.csproj
+++ b/SmartRoom/SmartRoom/SmartRoom.Web.csproj
@@ -297,6 +297,7 @@
     <Content Include="Views\YoutubeLive\Details.cshtml" />
     <Content Include="Views\YoutubeLive\Edit.cshtml" />
     <Content Include="Views\YoutubeLive\Index.cshtml" />
+    <Content Include="SmartRoom-97a44346405c.p12" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
