--- a/SmartRoom/SmartRoom/packages.config
+++ b/SmartRoom/SmartRoom/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Google.Apis" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Auth" version="1.9.0" targetFramework="net45" />
+  <package id="Google.Apis.Calendar.v3" version="1.9.0.1180" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.YouTube.v3" version="1.9.0.1280" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
