--- a/SmartRoom/SmartRoom/Web.config
+++ b/SmartRoom/SmartRoom/Web.config
@@ -100,8 +100,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
     <contexts>
-      <context type="SmartRoom.Database.SmartModel, SmartRoom.Database">
-        <databaseInitializer type="SmartRoom.Database.SmartModelInitializer, SmartRoom.Database" />
+      <context type="SmartRoom.Web.SmartModel, SmartRoom.Web">
+        <databaseInitializer type="SmartRoom.Web.SmartModelInitializer, SmartRoom.Web" />
       </context>
     </contexts>
 
