FirstPlayer~DBChanges~basicHTML

--- a/SmartRoom/SmartRoom/SmartRoom.Web.csproj
+++ b/SmartRoom/SmartRoom/SmartRoom.Web.csproj
@@ -229,7 +229,7 @@
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\YoutubeLiveController.cs" />
+    <Compile Include="Controllers\YoutubeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -288,6 +288,7 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\YouTubePlayer.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -329,11 +330,11 @@
     <Content Include="Views\Courses\Edit.cshtml" />
     <Content Include="Views\Courses\Index.cshtml" />
     <Content Include="SmartRoom-97a44346405c.p12" />
-    <Content Include="Views\YoutubeLive\Create.cshtml" />
-    <Content Include="Views\YoutubeLive\Delete.cshtml" />
-    <Content Include="Views\YoutubeLive\Details.cshtml" />
-    <Content Include="Views\YoutubeLive\Edit.cshtml" />
-    <Content Include="Views\YoutubeLive\Index.cshtml" />
+    <Content Include="Views\Youtube\Create.cshtml" />
+    <Content Include="Views\Youtube\Delete.cshtml" />
+    <Content Include="Views\Youtube\Details.cshtml" />
+    <Content Include="Views\Youtube\Edit.cshtml" />
+    <Content Include="Views\Youtube\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
