web config changes

--- a/SmartRoom/SmartRoom/Web.config
+++ b/SmartRoom/SmartRoom/Web.config
@@ -118,6 +118,15 @@
       <setting name="ApplicationName" serializeAs="String">
         <value>SmartRoom</value>
       </setting>
+      <setting name="UniversityDomain" serializeAs="String">
+        <value>kennesaw.edu</value>
+      </setting>
+      <setting name="UniversityTeacherDomain" serializeAs="String">
+        <value>@kennesaw.edu</value>
+      </setting>
+      <setting name="UniversityStudentDomain" serializeAs="String">
+        <value>@students.kennesaw.edu</value>
+      </setting>
     </SmartRoom.Web.Properties.Settings>
   </applicationSettings>
 </configuration>
