--- a/SmartRoom/SmartRoom/Properties/Settings.settings
+++ b/SmartRoom/SmartRoom/Properties/Settings.settings
@@ -5,5 +5,14 @@
     <Setting Name="ApplicationName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">SmartRoom</Value>
     </Setting>
+    <Setting Name="UniversityDomain" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">kennesaw.edu</Value>
+    </Setting>
+    <Setting Name="UniversityTeacherDomain" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">@kennesaw.edu</Value>
+    </Setting>
+    <Setting Name="UniversityStudentDomain" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">@students.kennesaw.edu</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
